--- a/Mac Views/ConfigurationWindowController.xib
+++ b/Mac Views/ConfigurationWindowController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16097" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17140" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16097"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17140"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,20 +16,20 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1025"/>
+            <view key="contentView" misplaced="YES" id="se5-gp-TjO">
+                <rect key="frame" x="0.0" y="0.0" width="480" height="135"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ehP-td-GZG">
-                        <rect key="frame" x="153" y="228" width="309" height="24"/>
+                        <rect key="frame" x="147" y="91" width="321" height="25"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="1" doubleValue="0.5" tickMarkPosition="below" numberOfTickMarks="4" sliderType="linear" id="66W-HE-dRc"/>
                         <connections>
-                            <binding destination="-2" name="value" keyPath="self.rotationPercentage" id="NOM-Sy-uFN"/>
+                            <binding destination="-2" name="value" keyPath="self.context.rotationPercentage" id="hjX-e6-oWh"/>
                         </connections>
                     </slider>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VJE-R7-UXH">
-                        <rect key="frame" x="18" y="234" width="59" height="16"/>
+                        <rect key="frame" x="18" y="99" width="59" height="16"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Rotation:" id="w6I-I1-vzf">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -37,15 +37,15 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PWF-2f-duo">
-                        <rect key="frame" x="18" y="197" width="109" height="16"/>
+                        <rect key="frame" x="18" y="62" width="109" height="16"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Number of Icons:" id="yZn-lb-t3q">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tPi-jQ-tiw">
-                        <rect key="frame" x="407" y="13" width="59" height="32"/>
+                    <button hidden="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tPi-jQ-tiw">
+                        <rect key="frame" x="402" y="13" width="65" height="32"/>
                         <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Q0H-Zv-Das">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -58,22 +58,25 @@ DQ
                         </connections>
                     </button>
                     <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yWc-j2-GVi">
-                        <rect key="frame" x="153" y="191" width="309" height="24"/>
+                        <rect key="frame" x="147" y="56" width="321" height="24"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="5" maxValue="30" doubleValue="5" tickMarkPosition="below" numberOfTickMarks="25" allowsTickMarkValuesOnly="YES" sliderType="linear" id="9RY-tv-PNQ"/>
                         <connections>
-                            <binding destination="-2" name="value" keyPath="self.numberOfIcons" id="NKH-aV-aip"/>
+                            <binding destination="-2" name="value" keyPath="self.context.numberOfIcons" id="Evj-4V-lw7"/>
                         </connections>
                     </slider>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="tPi-jQ-tiw" firstAttribute="top" secondItem="yWc-j2-GVi" secondAttribute="bottom" constant="20" symbolic="YES" id="1Ra-j8-OQe"/>
                     <constraint firstItem="yWc-j2-GVi" firstAttribute="width" secondItem="ehP-td-GZG" secondAttribute="width" id="41d-yM-afb"/>
                     <constraint firstItem="VJE-R7-UXH" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="BiY-Zm-2cm"/>
+                    <constraint firstItem="yWc-j2-GVi" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="56" id="Daf-hR-qd6"/>
                     <constraint firstItem="ehP-td-GZG" firstAttribute="top" secondItem="VJE-R7-UXH" secondAttribute="top" id="Jc7-Eu-CTY"/>
                     <constraint firstAttribute="trailing" secondItem="ehP-td-GZG" secondAttribute="trailing" constant="20" symbolic="YES" id="Li7-F9-MFR"/>
                     <constraint firstItem="ehP-td-GZG" firstAttribute="leading" secondItem="VJE-R7-UXH" secondAttribute="trailing" constant="80" id="NCL-w9-cc2"/>
                     <constraint firstItem="VJE-R7-UXH" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="Njz-2H-s4o"/>
                     <constraint firstItem="yWc-j2-GVi" firstAttribute="top" secondItem="ehP-td-GZG" secondAttribute="bottom" constant="16" id="XfL-LJ-hRG"/>
                     <constraint firstItem="PWF-2f-duo" firstAttribute="top" secondItem="VJE-R7-UXH" secondAttribute="bottom" constant="21" id="ckJ-dD-oVD"/>
+                    <constraint firstAttribute="bottom" secondItem="yWc-j2-GVi" secondAttribute="bottom" priority="700" constant="20" symbolic="YES" id="f2s-9I-hy7"/>
                     <constraint firstAttribute="trailing" secondItem="yWc-j2-GVi" secondAttribute="trailing" constant="20" id="kGC-mF-3LW"/>
                     <constraint firstItem="PWF-2f-duo" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" id="nyw-Te-aii"/>
                     <constraint firstAttribute="trailing" secondItem="tPi-jQ-tiw" secondAttribute="trailing" constant="20" symbolic="YES" id="tfh-ms-D96"/>
